name:                psc-pages
version:             0.1.0.0
synopsis:            A documentation generator for PureScript, which creates HTML pages
license:             MIT
license-file:        LICENSE
author:              Phil Freeman
maintainer:          paf31@cantab.net
copyright:           (c) Phil Freeman 2015
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
  buildable:           True
  exposed:             True
  build-depends:       base >=4.7 && <4.8,
                       cheapskate -any,
                       purescript >= 0.6.9.3 && < 0.7,
                       blaze-html,
                       text,
                       data-default,
                       filepath,
                       split,
                       Glob
  exposed-modules:     PscPages.RenderedCode
                     , PscPages.HtmlHelpers
                     , PscPages.Render
                     , PscPages.AsHtml
                     , PscPages.AsHoogle

executable psc-pages
  main-is:             Main.hs
  other-modules:
  other-extensions:
  build-depends:       base >=4.7 && <4.8,
                       purescript >= 0.6.9.3 && < 0.7,
                       psc-pages -any,
                       blaze-html,
                       transformers,
                       mtl,
                       optparse-applicative,
                       text,
                       filepath,
                       directory,
                       file-embed,
                       Glob
  hs-source-dirs:      psc-pages
  ghc-options:         -Wall
  default-language:    Haskell2010
