name:                psc-pages
version:             0.1.0.0
synopsis:            A documentation generator for PureScript, which creates HTML pages
license:             MIT
license-file:        LICENSE
author:              Phil Freeman
maintainer:          paf31@cantab.net
copyright:           (c) Phil Freeman 2015
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
  buildable:           True
  exposed:             True
  build-depends:       base >=4.7 && <4.8,
                       cheapskate -any,
                       purescript >= 0.6.9.3 && < 0.7,
                       blaze-html,
                       bytestring,
                       text,
                       data-default,
                       filepath,
                       split,
                       Glob,
                       transformers,
                       mtl,
                       optparse-applicative,
                       directory,
                       file-embed
  exposed-modules:     PscPages.RenderedCode
                     , PscPages.HtmlHelpers
                     , PscPages.Render
                     , PscPages.AsHtml
                     , PscPages.AsHoogle
                     , PscPages.Output
                     , PscPages.IOUtils
                     , PscPages.Program
                     , Paths_psc_pages

executable psc-pages
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8, psc-pages -any
  hs-source-dirs:      psc-pages
  ghc-options:         -Wall
  default-language:    Haskell2010
